--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <title>Aodh</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
-    
+<!--
+    <link rel="stylesheet" type="text/css" title="fontawesome" href="styles/fontawesome.css">
+    <link rel="stylesheet" type="text/css" title="solid" href="styles/solid.css">
+    <link rel="stylesheet" type="text/css" title="bootstrap" href="bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" title="style" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" title="dark" href="styles/dark.css">
+    <link rel="stylesheet" type="text/css" title="solaris" href="styles/solaris.css">
+    <link rel="stylesheet" type="text/css" title="hypersonic" href="styles/hypersonic.css">
+-->
   </head>
   <body>
     <div id="root">
